# CodePilot

./: .gitignore  MIGRATION_PLAN.md  PROJECT_DOCUMENTATION.md  README.md  check_api.py  check_js.js  check_syntax.py  check_templates.py  fix_1500_custom_codes.py  fix_all_question_solutions.py  fix_unique_solutions_and_testcases.py  generate_1500_questions.py  generate_questions.py  index.html  main.py  package-lock.json  package.json  populate_real_executable_testcases.py  pyproject.toml  seed_questions.py  test_jsdom.js  vercel.json  verify_solutions.py
api/: index.py
backend/: fix_sync.py  fix_urls.py  generate_dataset.py  generate_full_bank.py  import_data.py  list_questions.py  main.py  patch_questions.py  remove_pass.py  replace_questions.py  requirements.txt  sync_index.py  test_auth_api.py  update_solutions.py
backend/app/: database.py  gemini_service.py  gfg_scraper.py  main.py  models.py  pyproject.toml  routes.py
backend/database/: interview.db
backend/dataset/: questions.json
backend/downloads/: prepforge_questions_1_items.json  prepforge_questions_3_items.json  questions.json
backend/static/: index.html
frontend/: download-images.js  index.html  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/context/: auth-context.tsx
frontend/hooks/: use-mobile.ts  use-search-filter.ts
frontend/lib/: constants.ts
frontend/services/: mock-ai.ts  mock-interview.ts  mock-runner.ts
scratch/: fix_project_dates.py  test_gfg_scraping.py  test_live_scrapers.py  test_safe_eval.py  update_db_package.py
(+61 files in other folders)
